# my-qt-month-scheduler

./: environment.yaml  pyproject.toml
.github/workflows/: ci.yaml
src/service/: clock.py
tests/service/: clock_test.py
