[project]
name = "myQtMonthScheduler"
version = "0.0.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

tests = [
    "pytest"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/*"]